app/assets/stylesheets/public_dashboard/public_dashboard.css.scss
@import "compass/css3/text-shadow";
@import "compass/css3/box-shadow";
@import "compass/css3/border-radius";
@import "../common/mixins";
@import "../common/fonts";
@import "../common/vars";
@import "../common/buttons";
@import "common/form-elements";
@import "../common/common-sprite";
@import "../dashboard/dashboard-sprite";

body {
  background: #fff;
  min-width: 100%;
}

body:after {
  display:none!Important;
  @include box-sizing(border-box);
  content: '';
  background: rgba(red, .8);
  color: #fff;
  padding: 7px;
  position:fixed;
  top: 0;
  left: 50%;
  width: 80px;
  margin-left: -40px;
  text-align:center;
  z-index: 1000;
  @include simple-transition(all);
  @include border-radius(0 0 3px 3px);
}

.announcement {

  padding: 15px 0;
  border-bottom: 1px solid #E5E0D3;
  line-height: 120%;

  color: #333333;
  background: #FEF5DA;

  a { color:#397DB8; text-decoration: underline; }

  .inner {
    width: 100%;
    text-align: center;
  }

}

.content {
  @include background(image-url("layout/bkg.jpg") repeat 0 0);

  padding: 50px 0 0 0;

  &.empty {
    .inner {
      .datasets, .visualizations { width: 739px; }
      .info { margin-right: 0; }
    }
  }

  .inner{
    width: 1022px;
    margin: 0 auto;
    @include clearfix();
    @include box-sizing(border-box);
  }
}

header, footer { display :block; } // IE<9

footer {

  @include box-sizing(border-box);
  color: #999999;

  p { width: auto; }

  .inner { width: 1020px; }
  &, a { font-size: 13px; }
  p.right a { color: #2483B2; }

}

header {

  $bkgColor: #428AC6;
  height: auto;
  padding: 0;
  min-height: 36px;

  background: image-url('layout/gradient.png') repeat center 0 $bkgColor; // IE
  @include background(image-url("layout/gradient.png") repeat center 0 $bkgColor);
  @include box-shadow(none);

  .inner {

    padding: 24px 0;
    @include clearfix();
    @include box-sizing(border-box);

    h1,
    .logo {

      margin-top: 0;

      a {
        display: block;
        width: 93px;
        height: 18px;

        @include background(image-url('layout/cartodb.png') no-repeat);
        text-indent: -9999px;
        line-height: 0px;
        font-size: 0px;
        text-transform: uppercase;
      }
    }

    ul {
      top: 0;
      margin-top: 0;
    }
  }

} // header

.info {
  float:left;
  margin-right: 39px;
  width: 283px;
}

.info .tags {

  margin: 0 0 40px 0;

  li  {

    padding: 17px 0;

    border-bottom: 1px solid #ddd;
    border-bottom: 1px solid rgba(#BBBBBB, .2);
    color: #BABABA;

    a { line-height:normal; }

    h3 {
      font-size: 15px;
      font-weight: normal;
    }


    .close { float:right; margin: 0 3px 0 0; }

    &:first-child { padding-top: 0; }
    &:last-child  { border:none; }

    strong {
      color: #BABABA;
      font-size:13px;
      font-family: 'ProximaNova-Semibold', $text-fonts2;
      font-weight: 400;
      text-transform: uppercase;
    }

    a { font-size: 15px; }

  } // li

} // .info .tags

.user-info {

  $width: 283px;

  width: $width;
  margin: 0 0 45px 0;
  text-align:center;

  .avatar {
    display:block;
    position: relative;
    height: 128px;
    border: 1px solid rgba(#1D4879, .6);
    border-bottom: none;

    @include background(image-url("layout/avatar_bkg.png") repeat);
    @include border-radius(5px 5px 0 0);

    .circle {
      $width: 128px;

      clear:both;
      overflow:hidden;

      position:absolute;
      display:block;
      width: $width;
      height: $width;

      top: 46px;
      left: 50%;
      margin-left: -$width/2;

      background:#fff;
      @include border-radius(300px);
      @include box-shadow(0px 0px 0 4px rgba(#333, .2));
    }

  } // .avatar

  .separator {
    position:relative;
    width: 122px;
    height: 1px;
    padding: 22px 0 0 0;
    margin: 27px auto 0 auto;
    border-top: 1px solid #DBDBDB;
    background:transparent;
    @include opacity(1);
  }

  ul {
    clear:both;
    overflow:hidden;
    background:#fff;

    border: 1px solid #BBBBBB;
    @include border-radius(0 0 5px 5px);

    li {
      width: 140px;
      float:left;
      padding: 0;

      .count {
        padding: 25px 0;
        display: block;
      }

      @include box-sizing(border-box);

      text-align:center;
      color: #333333;
      text-transform: uppercase;

      &:first-child {
        border-right: 1px solid #BBBBBB;
      }

      strong {
        font-size:51px;
        display:block;
      }

      &, a, h2 {
        font-family: 'ProximaNova-Semibold', $text-fonts2;
        font-weight: 400;
        font-size:11px;
      }

      a:hover {
        text-decoration:none;
      }

    }

  } // ul

  .details {

    padding: 65px 0 37px 0;
    background:#fff;
    border-left: 1px solid #BBBBBB;
    border-right: 1px solid #BBBBBB;

    h2  {
      margin: 0;
      color: #333333;
      font-size: 21px;
      font-family: 'ProximaNova-Semibold', $text-fonts2;
      font-weight: 400;
      line-height: 120%;
    }

    p {
      width: 205px;
      margin: 15px auto 0 auto;
      color: #B2B2B2;
    }

    .twitter {
      display:block;
      margin: 3px 0 0 0;
    }

    .website {
      @include inline-block();
      text-align:center;
    }


  } // .details
} // .user-info

.empty_placeholder {
  @include inline-block();
  padding: 17px 30px;
  margin: 175px auto 0 auto;
  font-size: 21px;
  color: #CCCCCC;
  font-family: 'ProximaNova-Semibold', $text-fonts2;
  font-weight: 200;
  background: #F5F5F5;
  text-align:center;
  line-height: 125%;
}

.datasets,
.visualizations {
  float:left;
  width: 700px;
  text-align:center;
}
/* ... */

